Add new OAuth pages in server administration

--- a/indico/modules/oauth/templates/oauth/user_profile.html
+++ b/indico/modules/oauth/templates/oauth/user_profile.html
@@ -3,7 +3,7 @@
 {% from 'message_box.html' import message_box %}
 
 {% block subtitle -%}
-    {% trans %}OAuth{% endtrans %}
+    {% trans %}Authorized Apps{% endtrans %}
 {%- endblock %}
 
 {% block user_content %}
