--- a/indico/htdocs/sass/partials/_messageboxes.scss
+++ b/indico/htdocs/sass/partials/_messageboxes.scss
@@ -52,7 +52,7 @@
         padding: 0.5em 0.5em;
     }
 
-    .content-page-header + & {
+    .page-content-header + & {
         margin-top: 0.5em;
     }
 }
