--- a/indico/modules/api/templates/api/admin_keys.html
+++ b/indico/modules/api/templates/api/admin_keys.html
@@ -3,7 +3,7 @@
 {% block title %}{% trans %}API Keys{% endtrans %}{% endblock %}
 
 {%- block content %}
-    <table class="i-table-widget fixed-width">
+    <table class="i-table-widget">
         <thead>
             <tr>
                 <th>{% trans %}User{% endtrans %}</th>
