--- a/indico/modules/groups/templates/groups/_group_members.html
+++ b/indico/modules/groups/templates/groups/_group_members.html
@@ -3,7 +3,7 @@
     {% if not members %}
         <strong>{% trans %}There are no users in this group.{% endtrans %}</strong>
     {% else %}
-        <table class="i-table-widget fixed-width">
+        <table class="i-table-widget">
             <thead>
                 <tr>
                     <th>{% trans %}Name{% endtrans %}</th>
