--- a/indico/modules/payment/templates/payment/admin_settings.html
+++ b/indico/modules/payment/templates/payment/admin_settings.html
@@ -5,7 +5,7 @@
 
 {%- block content %}
     {% if not plugins %}
-        <div class="warning-message-box fixed-width">
+        <div class="warning-message-box">
             <div class="message-text">
                 {% trans -%}
                     There are no payment plugins installed, so the payment module cannot be enabled for any event.
