--- a/indico/web/templates/overview/base.html
+++ b/indico/web/templates/overview/base.html
@@ -11,7 +11,7 @@
 #}
 
 <div class="fixed-width-page">
-    <div class="content-page-header">
+    <div class="page-content-header">
         <h1>{% block title %}{% endblock %}</h1>
     </div>
 
