--- a/indico/modules/groups/templates/groups/groups.html
+++ b/indico/modules/groups/templates/groups/groups.html
@@ -34,7 +34,7 @@
 {% block title %}{% trans %}Groups{% endtrans %}{% endblock %}
 
 {%- block content %}
-    <div class="i-box-group vert fixed-width">
+    <div class="i-box-group vert">
         <div class="i-box titled">
             <div class="i-box-header">
                 <div class="i-box-title">
