--- a/indico/modules/oauth/templates/oauth/admin_register.html
+++ b/indico/modules/oauth/templates/oauth/admin_register.html
@@ -13,7 +13,7 @@
     {{ form_header(orientation='vertical') }}
     {{ form_rows(form) }}
     {% call form_footer() %}
-        <input class="i-button big highlight" type="submit" value="{% trans %}Register{% endtrans %}">
+        <input class="i-button big highlight" type="submit" value="{% block action_button %}{% trans %}Register{% endtrans %}{% endblock %}">
         <a href="{{ back_url }}" class="i-button big" data-button-back>{% trans %}Cancel{% endtrans %}</a>
     {% endcall %}
 {% endblock %}
