--- a/indico/modules/oauth/templates/oauth/app_new.html
+++ b/indico/modules/oauth/templates/oauth/app_new.html
@@ -2,7 +2,7 @@
 {% from 'forms/_form.html' import form_header, form_rows, form_footer %}
 
 {% block title %}
-    {%- trans %}OAuth settings{% endtrans -%}
+    {%- trans %}Applications settings{% endtrans -%}
 {% endblock %}
 
 {% block subtitle %}
