--- a/indico/modules/oauth/templates/oauth/apps.html
+++ b/indico/modules/oauth/templates/oauth/apps.html
@@ -1,7 +1,7 @@
 {% extends 'layout/base.html' %}
 
 {% block title %}
-    {%- trans %}OAuth settings{% endtrans -%}
+    {%- trans %}Applications settings{% endtrans -%}
 {% endblock %}
 
 {% block content %}
@@ -13,26 +13,24 @@
                 {%- trans %}Applications{% endtrans -%}
             </div>
             <div class="i-box-buttons toolbar right">
-                <a href="{{ url_for('.admin_register') }}" class="i-button icon-plus">
+                <a href="{{ url_for('.app_new') }}" class="i-button icon-plus">
                     {%- trans %}Register new application{% endtrans -%}
                 </a>
             </div>
         </div>
         <div class="i-box-content">
             <ul class="group-list with-buttons">
-                {% for client in clients %}
+                {% for application in applications %}
                     <li>
                         <div class="list-item-title">
-                            {{ client.name }}
-                            <div data-consumer-key="{{ client.client_id }}" aria-hidden="true" style="margin:0" class="i-button i-button-mini icon-remove icon-only right" title="{% trans %}Delete this client.{% endtrans %}"></div>
-                            <div data-consumer-key="{{ client.client_id }}" aria-hidden="true" style="margin:0" class="i-button i-button-mini icon-trust ${'trusted' if client.is_trusted else ''} icon-only right"></div>
+                            {{ application.name }}
                         </div>
                         <div class="list-item-content">
                             <span class="list-item-content-title">
                                 {% trans %}client id{% endtrans %}
                             </span>
                             <span class="list-item-content-data">
-                                {{ client.client_id }}
+                                {{ application.client_id }}
                             </span>
                         </div>
                         <div class="list-item-content">
@@ -40,7 +38,7 @@
                                 {% trans %}client secret{% endtrans %}
                             </span>
                             <span class="list-item-content-data">
-                                {{ client.client_secret }}
+                                {{ application.client_secret }}
                             </span>
                         </div>
                     </li>
