Improve application details page
Also add apps_base template to set the same title in all related pages

--- a/indico/modules/oauth/templates/oauth/app_new.html
+++ b/indico/modules/oauth/templates/oauth/app_new.html
@@ -1,9 +1,5 @@
-{% extends 'layout/base.html' %}
+{% extends 'oauth/apps_base.html' %}
 {% from 'forms/_form.html' import form_header, form_rows, form_footer %}
-
-{% block title %}
-    {%- trans %}Applications settings{% endtrans -%}
-{% endblock %}
 
 {% block subtitle %}
     {%- trans %}Register new application{% endtrans -%}
