--- a/indico/modules/oauth/templates/oauth/apps.html
+++ b/indico/modules/oauth/templates/oauth/apps.html
@@ -1,8 +1,4 @@
-{% extends 'layout/base.html' %}
-
-{% block title %}
-    {%- trans %}Applications settings{% endtrans -%}
-{% endblock %}
+{% extends 'oauth/apps_base.html' %}
 
 {% block content %}
     <div id="inPlaceAddConsumer" style="margin-bottom: 1em;"></div>
