--- a/indico/modules/oauth/templates/oauth/app_details.html
+++ b/indico/modules/oauth/templates/oauth/app_details.html
@@ -1,10 +1,49 @@
-{% extends 'oauth/app_new.html' %}
+{% extends 'oauth/apps_base.html' %}
+{% from 'forms/_form.html' import form_header, form_rows, form_footer %}
 
 {% block subtitle %}
     {{ application.name }}
 {% endblock %}
-{% endblock %}
 
-{% block action_button %}
-    {%- trans %}Update{% endtrans -%}
+{% block content %}
+    <div class="i-box titled">
+        <div class="i-box-header">
+            <div class="i-box-title">
+                {%- trans %}Details{% endtrans -%}
+            </div>
+            <div class="i-box-buttons toolbar right">
+                <div class="group">
+                    <button class="i-button">
+                        {%- trans %}Revoke user tokens{% endtrans -%}
+                    </button>
+                    <button class="i-button">
+                        {%- trans %}Reset client secret{% endtrans -%}
+                    </button>
+                </div>
+                <div class="group">
+                    <button class="i-button icon-remove danger"
+                        data-confirm="{% trans %}Are you sure you want to remove this application?{% endtrans %}">
+                        {%- trans -%}Delete{%- endtrans -%}
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="i-box-content">
+            <div>
+                {%- trans %}Client ID{% endtrans -%}
+            </div>
+            <div>{{ application.client_id }}</div>
+            <div>
+                {%- trans %}Client Secret{% endtrans -%}
+            </div>
+            <div>{{ application.client_secret }}</div>
+        </div>
+
+        {{ form_header(orientation='vertical') }}
+        {{ form_rows(form) }}
+        {% call form_footer() %}
+            <input class="i-button big highlight" type="submit" value="{% trans %}Update application{% endtrans %}">
+            <a href="{{ back_url }}" class="i-button big" data-button-back>{% trans %}Cancel{% endtrans %}</a>
+        {% endcall %}
+    </div>
 {% endblock %}
