--- a/indico/modules/oauth/templates/oauth/app_details.html
+++ b/indico/modules/oauth/templates/oauth/app_details.html
@@ -13,15 +13,20 @@
             </div>
             <div class="i-box-buttons toolbar right">
                 <div class="group">
-                    <button class="i-button">
+                    <button class="i-button"
+                        data-href="{{ url_for('.app_revoke', application) }}" data-method="POST"
+                        data-confirm="{% trans %}Are you sure you want to revoke all user tokens?{% endtrans %}">
                         {%- trans %}Revoke user tokens{% endtrans -%}
                     </button>
-                    <button class="i-button">
+                    <button class="i-button"
+                        data-href="{{ url_for('.app_reset', application) }}" data-method="POST"
+                        data-confirm="{% trans %}Are you sure you want to reset the client secret?{% endtrans %}">
                         {%- trans %}Reset client secret{% endtrans -%}
                     </button>
                 </div>
                 <div class="group">
                     <button class="i-button icon-remove danger"
+                        data-href="{{ url_for('.app_delete', application) }}" data-method="POST"
                         data-confirm="{% trans %}Are you sure you want to remove this application?{% endtrans %}">
                         {%- trans -%}Delete{%- endtrans -%}
                     </button>
