--- a/indico/htdocs/sass/partials/_lists.scss
+++ b/indico/htdocs/sass/partials/_lists.scss
@@ -60,6 +60,10 @@
         display: inline-block;
         margin: 0 0 0.7em 0;
         padding: 0.3em 1em 0.3em 1em;
+
+        &:last-of-type {
+            margin-bottom: 0px;
+        }
     }
 
     dt {
