--- a/indico/modules/oauth/templates/oauth/user_profile.html
+++ b/indico/modules/oauth/templates/oauth/user_profile.html
@@ -31,6 +31,13 @@
                                         {% endif %}
                                     </span>
                                 </span>
+                                <button class="i-button"
+                                        data-href="{{ url_for('.user_token_revoke', token) }}"
+                                        data-method="POST"
+                                        data-confirm="{% trans app_name=token.application.name %}{{ app_name }} will no longer have access to your Indico data.<br>
+                                        Are you sure you want to revoke your token?{% endtrans %}">
+                                    {%- trans %}Revoke{% endtrans -%}
+                                </button>
                             </span>
                         </li>
                     {% endfor %}
