Nicer placeholder for no authorized applications

--- a/indico/modules/oauth/templates/oauth/user_profile.html
+++ b/indico/modules/oauth/templates/oauth/user_profile.html
@@ -7,48 +7,47 @@
 {%- endblock %}
 
 {% block user_content %}
-    {% if tokens %}
-        <div class="i-box titled">
-            <div class="i-box-header">
-                <div class="i-box-title">
-                    {%- trans %}Authorized applications{% endtrans -%}
-                </div>
-            </div>
-            <div class="i-box-content">
-                <p>{% trans %}This is the list of applications your authorized to access your Indico data.{% endtrans %}</p>
-                <ul class="group-list with-buttons">
-                    {% for token in tokens %}
-                        <li>
-                            <span class="list-item-title">{{ token.application.name }}</span>
-                            <span class="right">
-                                <span class="list-item-info">
-                                    <span class="label">{% trans %}Last used:{% endtrans %}</span>
-                                    <span class="content">
-                                        {% if token.last_used_dt %}
-                                            {{ token.last_used_dt | format_datetime('short') }}
-                                        {% else %}
-                                            {% trans %}Never{% endtrans %}
-                                        {% endif %}
-                                    </span>
-                                </span>
-                                <button class="i-button"
-                                        data-href="{{ url_for('.user_token_revoke', token) }}"
-                                        data-method="POST"
-                                        data-confirm="{% trans app_name=token.application.name %}{{ app_name }} will no longer have access to your Indico data.<br>
-                                        Are you sure you want to revoke your token?{% endtrans %}">
-                                    {%- trans %}Revoke{% endtrans -%}
-                                </button>
-                            </span>
-                        </li>
-                    {% endfor %}
-                </ul>
+    <div class="i-box titled">
+        <div class="i-box-header">
+            <div class="i-box-title">
+                {%- trans %}Authorized applications{% endtrans -%}
             </div>
         </div>
-    {% endif %}
-
-    {% call message_box('warning', id='no-third-apps', style=('display:none;' if tokens else '')) %}
-        {%- trans %}No third party applications have been authorized.{% endtrans -%}
-    {% endcall %}
+        <div class="i-box-content">
+            <p>{% trans %}This is the list of applications your authorized to access your Indico data.{% endtrans %}</p>
+            <ul class="group-list with-buttons">
+                {% if not tokens %}
+                    <li class="italic">
+                        {%- trans %}No third party applications have been authorized.{% endtrans -%}
+                    </li>
+                {% endif %}
+                {% for token in tokens %}
+                    <li>
+                        <span class="list-item-title">{{ token.application.name }}</span>
+                        <span class="right">
+                            <span class="list-item-info">
+                                <span class="label">{% trans %}Last used:{% endtrans %}</span>
+                                <span class="content">
+                                    {% if token.last_used_dt %}
+                                        {{ token.last_used_dt | format_datetime('short') }}
+                                    {% else %}
+                                        {% trans %}Never{% endtrans %}
+                                    {% endif %}
+                                </span>
+                            </span>
+                            <button class="i-button"
+                                    data-href="{{ url_for('.user_token_revoke', token) }}"
+                                    data-method="POST"
+                                    data-confirm="{% trans app_name=token.application.name %}{{ app_name }} will no longer have access to your Indico data.<br>
+                                    Are you sure you want to revoke your token?{% endtrans %}">
+                                {%- trans %}Revoke{% endtrans -%}
+                            </button>
+                        </span>
+                    </li>
+                {% endfor %}
+            </ul>
+        </div>
+    </div>
 
     <script>
         $('#oauth-token-list').on('click', '.icon-remove', function() {
